ui/ui.css
/* @import url('http://fonts.googleapis.com/css?family=Lato'); */
@import url(./icons.css);
@import url(./panel.css);

.emmet-re-view {
	position: fixed;
	left: 0;
	top: 0;
	height: 100%;
	width: 100%;
	min-width: 900px;
	z-index: 9999;
	overflow: hidden;
	background: #7f8c8d;
	font-family: Lato, Helvetica, Arial, sans-serif;
	font-size: 13px;
	color: #2d3f4f;
	text-align: left;
}

.emmet-re-view__scroller {
	position: absolute;
	top: 0;
	bottom: 4.5em;
	left: 0;
	right: 0;
	padding: 50px 0;
	overflow: auto;
	overflow-y: hidden;
	white-space: nowrap;
}

.emmet-re-view__item {
	position: relative;
	display: inline-block;
	width: 500px;
	height: 100%;
	/* margin: 0 50px; */
	margin-right: 50px;
	background: #fff;
	-webkit-box-shadow: 10px 20px 50px rgba(0, 0, 0, 0.5);
	box-shadow: 10px 20px 50px rgba(0, 0, 0, 0.5);
}

.emmet-re-view__item:first-child {
	margin-left: 50px;
}

.emmet-re-view__item-ui {
	position: absolute;
	display: inline-block;
	position: absolute;
	width: 100%;
	height: 100%;
}

.emmet-re-view__item-ui-resize {
	position: absolute;
	width: 7px;
	height: 100%;
	right: -7px;
	top: 0;
	cursor: col-resize;
	background: #d25211;
	z-index: 11;
}

.emmet-re-view__item-ui-resize-overlay {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 10;
	display: none;
}

.emmet-re-view_drag .emmet-re-view__item-ui-resize-overlay {
	display: block;
}

.emmet-re-view__item-ui-resize:before {
	content: '. . .';
	font-size: 15px;
	font-family: arial, sans-serif;
	font-weight: bold;
	color: #fff;
	display: block;
	width: 100%;
	position: absolute;
	top: 50%;
	left: 0px;
	line-height: 0.6;
	white-space: normal;
	text-align: center;
	margin-top: -0.9em;
}

.emmet-re-view__item-ui-top {
	position: absolute;
	right: 0;
	bottom: 100%;
	padding-bottom: 10px;
	width: 100%;
	font-size: 16px;
	text-align: right;
	color: #95a5a6;
}

.emmet-re-view__item-ui-top .emmet-re-view__icon {
	cursor: pointer;
}

.emmet-re-view__item-ui-resize,
.emmet-re-view__item-ui-top {
	z-index: 2;
	opacity: 0;
	-webkit-transition: opacity 0.3s;
	-moz-transition: opacity 0.3s;
	-ms-transition: opacity 0.3s;
	-o-transition: opacity 0.3s;
	transition: opacity 0.3s;
}

.emmet-re-view__item:hover .emmet-re-view__item-ui-resize,
.emmet-re-view__item:hover .emmet-re-view__item-ui-top {
	opacity: 1;
}

.emmet-re-view__item-ui-label {
	position: absolute;
	display: block;
	top: 100%;
	font-size: 12px;
	padding-top: 7px;
	width: 100%;
	text-align: center;
	color: #bdc3c7;
}

.emmet-re-view-iframe {
	border: none;
	position: absolute;
	width: 100%;
	height: 100%;
	display: inline-block;
	-webkit-transform-origin: 0 0;
	-moz-transform-origin: 0 0;
	-ms-transform-origin: 0 0;
	-o-transform-origin: 0 0;
	transform-origin: 0 0;
}

.emmet-re-view__button {
	padding: 10px 19px;
	font-size: 13px;
	font-weight: normal;
	border-radius: 6px;
	color: #fff;
	background: #20a085;
	border: 0;
	cursor: pointer;
	display: inline !important;
	font-family: Lato, Helvetica, Arial, sans-serif;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.emmet-re-view__button:hover {
	background: #26bb9d;
}

.emmet-re-view__button:active {
	background: #2ad0af;
}

.emmet-re-view__button:focus {
	outline: none;
}

.emmet-re-view__button[data-action="reset"] {
	color: #bdc3c7;
	background: none;
	border: 2px solid #bdc3c7;
	padding: 8px 17px;
}

.emmet-re-view__button[data-action="reset"]:hover {
	background: none;
	border-color: #ecf0f1;
	color: #ecf0f1;
}

.emmet-re-view__input {
	background: none;
	padding: 8px 17px;
	border: 2px solid #ecf0f1;
	color: #ecf0f1;
	font-size: 13px;
	border-radius: 6px;
	margin: -10px 5px;
	display: inline !important;
	font-family: Lato, Helvetica, Arial, sans-serif;
	font-weight: normal;
}

.emmet-re-view__input:focus {
	outline: none;
}

.emmet-re-view__input[type="number"] {
	padding-right: 8px;
}

.emmet-re-view__label {
	display: inline !important;
	font-family: Lato, Helvetica, Arial, sans-serif;
	font-size: 1em;
	font-weight: normal;
}

.emmet-re-view__error {
	position: absolute;
	width: 25em;
	font-size: 2em;
	left: 50%;
	top: 50%;
	line-height: 1.4;
	display: none;
	-webkit-transform: translate(-50%, -50%);
	-ms-transform: translate(-50%, -50%);
	-o-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%);
}

.emmet-re-view_error .emmet-re-view__error {
	display: block;
}

.emmet-re-view_error .emmet-re-view__scroller {
	display: none;
}

